# object_tracking_2d_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: custom_rosconsole.conf  object_tracking_2d_ros.cfg  object_tracking_2d_ros_init.cfg
data/: .gitignore  Distortion_kinect.xml  Distortion_normal.xml  Intrinsics_kinect_dataset.xml  Intrinsics_normal.xml  Waterglass_white_800.xml  descriptor004.xml  pose004.xml  wing_basic.xml
data/Waterglass_white_800/: Waterglass_white_800.dae  Waterglass_white_800.obj.xml  Waterglass_white_800.txt  Waterglass_white_800.xml  Waterglass_white_800_edge_template000.txt  Waterglass_white_800_edge_template001.txt  Waterglass_white_800_edge_template002.txt  Waterglass_white_800_edge_template003.txt  Waterglass_white_800_edge_template004.txt  Waterglass_white_800_edge_template005.txt  Waterglass_white_800_edge_template006.txt  Waterglass_white_800_edge_template007.txt  Waterglass_white_800_edge_template008.txt  Waterglass_white_800_edge_template009.txt  Waterglass_white_800_edge_template010.txt  Waterglass_white_800_edge_template011.txt  Waterglass_white_800_edge_template012.txt  Waterglass_white_800_edge_template013.txt  Waterglass_white_800_edge_template014.txt  Waterglass_white_800_edge_template015.txt  Waterglass_white_800_edge_template016.txt  Waterglass_white_800_edge_template017.txt  Waterglass_white_800_edge_template018.txt  Waterglass_white_800_edge_template019.txt  Waterglass_white_800_edge_template020.txt  Waterglass_white_800_edge_template021.txt  Waterglass_white_800_edge_template022.txt  Waterglass_white_800_edge_template023.txt  Waterglass_white_800_edge_template024.txt  Waterglass_white_800_edge_template025.txt  Waterglass_white_800_edge_template026.txt  Waterglass_white_800_edge_template027.txt  Waterglass_white_800_edge_template028.txt  Waterglass_white_800_edge_template029.txt  Waterglass_white_800_edge_template030.txt  Waterglass_white_800_edge_template031.txt  Waterglass_white_800_edge_template032.txt  Waterglass_white_800_edge_template033.txt  (+64 more)
data/milk/: milk.dae  (+16 more)
docker/: Makefile  run-video.sh  run.sh
include/: ObjectDetection.h  object_tracking_2d.h  object_tracking_2d_ros.h
launch/: init_pose_test_pup.py  object_tracking_2d_ros.launch  object_tracking_2d_ros_openni.launch  object_tracking_2d_ros_openni_multiple.launch  object_tracking_2d_ros_openni_multiple1.launch  object_tracking_2d_ros_openni_oj.launch  object_tracking_2d_ros_openni_td.launch  object_tracking_2d_ros_webcam.launch
msg/: ObjectDetection.msg  ObjectDetections.msg
rviz/: multiple1.rviz  openni.rviz  openni_multiple.rviz
scripts/: pose_init.py  talker.py
src/: object_tracking_2d.cpp  object_tracking_2d_ros.cpp  user_input_thread.cpp
(+196 files in other folders)
