<?xml version="1.0"?>
<package>
  <name>object_tracking_2d_ros</name>
  <version>0.0.0</version>
  <description>
    ROS wrapper for the Cognitive Robotics Lab's C++ object_tracking_2d_ros.  object_tracking_2d_ros was originally developed by Changhyun Choi within Cognitive Robotics Lab at the Georgia Tech.
  </description>
  <license>BSD</license>

  <maintainer email="roxfoxpox@gmail.com">ruffsl</maintainer>
  <author     email="roxfoxpox@gmail.com">ruffsl</author>

  <url type="website">https://github.com/CognitiveRobotics/object_tracking_2d_ros</url>
  <url type="repository">https://github.com/CognitiveRobotics/object_tracking_2d_ros</url>
  <url type="bugtracker">https://github.com/CognitiveRobotics/object_tracking_2d_ros/issues</url>



  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>git</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
